# dioxus-community.github.io

./: .gitignore  404.html  Cargo.toml  Dioxus.toml  README.md  build.rs  build.sh  index.html  input.css  tailwind.config.js  tailwind.css
.github/workflows/: gh-pages.yml
assets/dioxus/: dioxus-community.js  dioxus-community.js.br  dioxus-community_bg.wasm  dioxus-community_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
assets/dioxus/snippets/dioxus-interpreter-js-85a0a2f8acce2e86/: inline0.js
books/learning-rust-by-making-a-website/book/: 404.html  chapter_1.html  print.html
books/learning-rust-by-making-a-website/src/: chapter_1.md
guides/books/learning-rust-by-making-a-website/: 404.html  book.toml  chapter_1.html  chapter_2.html  print.html  searchindex.js  searchindex.json
guides/books/learning-rust-by-making-a-website/src/: SUMMARY.md  chapter_2.md
public/: tailwind.css
src/: guides.rs  made_with_dioxus.rs  main.rs  navbar.rs  our_projects.rs  projects.rs
src/components/: guide_card.rs  guide_grid.rs  layout.rs  mod.rs  navigation.rs  project_card.rs  project_flexbox.rs  project_grid.rs
src/models/: guide.rs  mod.rs  project.rs  project_category.rs  project_status.rs
src/routes/: guides.rs  home.rs  made_with_dioxus.rs  mod.rs  not_found.rs  our_projects.rs
