[package]
name = "dioxus-community"
version = "0.1.0"
authors = ["marc2332"]
edition = "2021"

[dependencies]
dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }
dioxus-router = { version = "0.4", features = ["web"] }
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
